<b>2008-12-05</b>

* Popup "List" button changed to icon
* Airport selection for input now via popup
* Flight path being edited or added now drawn on map
* Some memory leaks fixed
* Flight lists drawn faster on IE
* No longer possible to "stack" multiple adds/edits

<b>2008-12-03</b>

* Log number of times map has been viewed, visible in Settings

<b>2008-12-02</b>

* Zoom map to fit when viewing another user's flights/trip
* Allow "Unknown" airline (default if not given)
* Flight lists now shown with newest flight first
* Airport codes looked up in cache before autocomplete AJAX call
* No autocompletion for 0/1 char strings or those containing ()

<b>2008-11-30</b>

* <a href="/help/csv.html">CSV</a> (comma-separated value) import/export/backup implemented. (2317084)
* "Delete all flights" button added to Settings.
* Some minor bug fixes for FlightMemory imports.
* Autocomplete prioritizes IATA over non-IATA airlines.
* Calendar now goes back to 1970.
* Filter select lenghts now hardcoded (160px) to prevent IE bug.

<b>2008-11-28</b>

* FlightMemory import now handles missing airlines better.

<b>2008-11-27</b>

* Near-total rewrite of flight input/editing, with autocompletion implemented for airlines and airports.
* Obsoleted "Add and clear" button removed.
* Cosmetic improvements to airline search

<b>2008-11-26</b>

* FlightMemory importer updated to match current FlightMemory site.

<b>2008-11-22</b>

* ICAO and private airports now supported for FlightMemory imports.
* Empty seat class in FlightMemory now maps to "Economy" automatically.

<b>2008-11-21</b>

* Autocomplete implemented for selecting planes.
* "Analyze" function sped up considerably by optimizing query SQL.

<b>2008-11-18</b>

* Filters applied automatically when selected.

<b>2008-11-17</b>

* "Swap airports" rewritten, now much faster and no more threading problems
* Keyboard focus set automatically after new flight, logout

<b>2008-11-14</b>
